# render-pipeline

./: CMakeLists.txt  RenderingConfig.h.in  glad.c  main.cpp  shader.hpp  stb.cpp
libraries/glad/include/glad/: glad.h
shaders/: tutorial.vs
